dist/docs/3.0.26/reference/versions.mdx
---
title: Versions & Compatibility
sidebarTitle: Versions
description: "Every published AdCP version, its status, and its end-of-life date. Start here if you're choosing or upgrading a version."
"og:title": "AdCP — Versions & Compatibility"
---

## At a glance

<Info>
**Choosing today:** new production integrations should use 3.1 with wire pin `"3.1"`. Use the exact 3.2 prerelease pin only in development or staging after the peer advertises it.
</Info>

| Status | Versions | Wire pin | What it means |
|---|---|---|---|
| **Beta** | 3.2 (current prerelease: `beta.3`) | `"3.2-beta.3"` | Development and staging only. TypeScript SDK support is available in `@adcp/sdk@14.0.0-beta.4`; follow the [3.2 beta program](/dist/docs/3.0.26/reference/3-2-beta). |
| **Active** | 3.1 (current stable: 3.1.15) | `"3.1"` | Current production minor release. See [What's New in AdCP 3.1](/dist/docs/3.0.26/reference/whats-new-in-3-1) for the feature set. |
| **Maintained** | 3.0 (current stable: 3.0.24) | `"3.0"` | Supported previous minor for existing production integrations. Receives compatibility and security patches. |
| **End of life** | 2.0.0, 2.1.0, 2.5.0–2.5.3 | — | No patches. Migrate to 3.0. See [v2 sunset](/dist/docs/3.0.26/reference/v2-sunset). |
| **Planned** | 4.0 | — | Target in [planned releases](/dist/docs/3.0.26/reference/versioning#planned-releases). |

**Wire values are release-precision only.** Send `"3.1"` for the stable 3.1 line or `"3.0"` for the maintained 3.0 line. Do not send patch components like `"3.0.19"` or full semver pre-release values like `"3.1.0-rc.15"`. Historical prerelease pins such as `"3.1-rc.15"` remain valid only for agents that explicitly advertise those prerelease values. See [patches are not negotiated](/dist/docs/3.0.26/reference/versioning#patches-are-not-negotiated).

*Status legend: Pending beta = announced but not yet published. Beta = immutable prerelease checkpoints for development and staging. Active = current stable generation. Maintained = supported previous minor. Security-only = patches for security issues only, no features. End of life = no patches. Planned = not yet released.*

## All published versions

### 3.x — current generation

| Version | Released | Notes |
|---|---|---|
| 3.0.0 | 2026-04-22 | GA — stable baseline for the 3.x cycle. |
| 3.0.1 through 3.0.10 | 2026-04-28 to 2026-05-10 | Patches. Wire-compatible with 3.0.0. |
| 3.0.11 through 3.0.15 | 2026-05-11 to 2026-05-31 | Patches. Wire-compatible with 3.0.0. |
| 3.0.16 through **3.0.24** | 2026-06-14 to 2026-08-16 | Patches. **3.0.24 is the latest stable patch.** Wire-compatible with 3.0.0. |
| **3.1.0** | 2026-06-18 | GA — current production minor release. Use wire pin `"3.1"`. |
| 3.1.1 | 2026-06-30 | Patch. Wire-compatible with 3.1.0. |
| 3.1.2 | 2026-07-08 | Patch. Wire-compatible with 3.1.0. |
| 3.1.3 | 2026-07-13 | **Withdrawn. Do not use.** It added a stable schema field in a patch release and included an incorrect publisher-domain filter implementation. The artifacts remain available only for auditability. Use 3.1.2 instead. |
| 3.1.4 through **3.1.15** | 2026-07-18 to 2026-08-16 | Patches. **3.1.15 is the latest stable patch.** Wire-compatible with 3.1.0. |

Supported patches don't change the wire contract. Upgrading within 3.0.x is always safe, and 3.1 remains additive over 3.0. The withdrawn 3.1.3 release is not a supported patch or implementation target. For per-version detail, see [Release Notes](/dist/docs/3.0.26/reference/release-notes) (curated narrative) and the [Changelog](/dist/docs/3.0.26/reference/changelog) (full technical history).

### Prereleases

| Version | Released | Notes |
|---|---|---|
| **3.2.0-beta.3** | 2026-08-19 | Current prerelease. `@adcp/sdk@14.0.0-beta.4` embeds this exact checkpoint. Use `"3.2-beta.3"` only when both peers explicitly advertise it. |
| 3.2.0-beta.2 | 2026-08-19 | Integration checkpoint, superseded by beta.3 for new beta testing. |
| 3.2.0-beta.1 | 2026-08-19 | Integration-correction checkpoint, superseded by beta.2 for new beta testing. |
| 3.2.0-beta.0 | 2026-08-17 | Protocol-first beta input for SDK work. Remains available for pinned prerelease adopters. |
| 3.1.0-rc.1 through 3.1.0-rc.15 | 2026-05-29 to 2026-06-16 | Superseded by 3.1.0 GA. These artifacts remain available for pinned prerelease adopters and release forensics. |
| 3.0.0-beta.1 through rc.2 | 2026-01-26 to 2026-03-15 | Superseded. |
| 3.0.0-rc.3 | 2026-04-01 | Superseded by GA. See [prerelease upgrade notes](/dist/docs/3.0.26/reference/migration/prerelease-upgrades) if you adopted rc.3. |

### 2.x — end of life

| Version | Released | Notes |
|---|---|---|
| 2.0.0 | 2025-10-15 | End of life. No patches. Migrate to 3.0. |
| 2.1.0 | 2025-10-19 | End of life. No patches. Migrate to 3.0. |
| 2.5.0 | 2025-11-22 | End of life. No patches. |
| 2.5.1 | 2025-12-24 | End of life. No patches. |
| 2.5.2 | 2026-01-07 | End of life. No patches. |
| 2.5.3 | January 2026 | End of life. **Last 2.x release.** |

The entire 2.x line has been fully deprecated since August 1, 2026 (UTC). The 2.x schema URLs continue to resolve so existing integrations don't break silently, but those schemas receive no further updates. See [v2 Sunset](/dist/docs/3.0.26/reference/v2-sunset) for migration paths.

## FAQ

### What's "current"?
For new production integrations, **3.1.15** is current; pin your integration to `"3.1"` (not `"3.1.15"`). Existing 3.0 integrations can remain pinned to `"3.0"` while they migrate. Use 3.2 only for beta testing with an exact advertised prerelease pin. See [Version negotiation](/dist/docs/3.0.26/reference/versioning#version-negotiation).

### What happened to 2.2, 2.3, 2.4, 2.6?
The 2.x line skipped version numbers during its working-group cycle. Some appear as in-flight changelog entries but were never released — the changes were rolled forward into the next published version or deferred to 3.0. The six published 2.x releases are 2.0.0, 2.1.0, 2.5.0, 2.5.1, 2.5.2, and 2.5.3.

### Can I still register a v2 agent?
Yes — v2 agents can be registered in the AgenticAdvertising.org registry but cannot be verified. Certification and verified-default discovery require v3.x. See [v2 Sunset → If you use the AgenticAdvertising.org registry](/dist/docs/3.0.26/reference/v2-sunset#if-you-use-the-agenticadvertisingorg-registry).

### How long will 3.0 be supported?
At least 12 months after 4.0 GA. See [Versioning → Support window for previous major](/dist/docs/3.0.26/reference/versioning#support-window-for-previous-major).

### Where is 4.0?
Targeted for early 2027. 3.x is mid-cycle — see the [planned releases table](/dist/docs/3.0.26/reference/versioning#planned-releases).

## Choosing a version

| If you are… | Use |
|---|---|
| Building a new production integration today | **3.1**. Pin `"3.1"` on the wire. |
| Implementing or testing 3.2 without an SDK | Use the signed **3.2 beta.3** artifacts with raw-wire or code-generation workflows. Follow the [beta program](/dist/docs/3.0.26/reference/3-2-beta). |
| Running an SDK-backed 3.2 integration test | Use `@adcp/sdk@14.0.0-beta.4` with exact wire pin `"3.2-beta.3"`, or another SDK only after its support matrix row names an exact checkpoint. |
| Running an existing 3.0 integration | Stay on **3.0** while you migrate, or move to **3.1** when your SDK and validation are ready. |
| Running a 2.5.x integration | Upgrade now — out of support. Start with the [migration guide](/dist/docs/3.0.26/reference/migration). |
| Running a 2.0 or 2.1 integration | Upgrade now — out of support. |
| Trying a post-3.1 feature | Use the [3.2 beta program](/dist/docs/3.0.26/reference/3-2-beta), [Release Notes](/dist/docs/3.0.26/reference/release-notes), and [experimental status](/dist/docs/3.0.26/reference/experimental-status). |

## Related

- **[Versioning & Governance](/dist/docs/3.0.26/reference/versioning)** — release tiers, schema-change scope, cadence policy
- **[v2 Sunset](/dist/docs/3.0.26/reference/v2-sunset)** — full v2 end-of-life timeline and migration paths
- **[What's new in v3](/dist/docs/3.0.26/reference/whats-new-in-v3)** — feature-by-feature summary of what 3.0 adds
- **[What's New in AdCP 3.1](/dist/docs/3.0.26/reference/whats-new-in-3-1)** — final 3.1 feature set and adopter actions
- **[What's new in AdCP 3.2](/dist/docs/3.0.26/reference/whats-new-in-3-2)** — beta feature set and adopter actions
- **[3.2 beta program](/dist/docs/3.0.26/reference/3-2-beta)** — current artifacts, exact SDK pairing, and beta testing gates
- **[Release Notes](/dist/docs/3.0.26/reference/release-notes)** — curated narrative for each version
- **[Changelog](/dist/docs/3.0.26/reference/changelog)** — full technical change history
